# trains-valkey

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
bench/: ARCHITECTURE.md
bench/coordinator/: e4_chaos.py  e5_sequencer.py  test_e5_sequencer.py
bench/coordinator/schedules/: t1-multi-victim.json  t1-partition.json  t1-rejoin.json  t2-asymmetric-partition.json  t2-burst-partition.json  t2-clock-skew.json
bench/demos/: README.md
bench/demos/distributed-lock/: lock_chaos.py
bench/demos/leaderboard/: leader_chaos.py
bench/diagrams/: 01-ec2-bench-infrastructure.drawio  02-protocol-layer-stack.drawio  03-resp-data-flow.drawio  04-view-change-sequence.drawio  README.md
bench/reports/: blog-trains-replicated-redis-2026-05-26.md  paper-trains-replicated-redis-draft-2026-05-26.md  remediation-plan-trains-redis-2026-05-27.md  threat-model-trains-redis-2026-05-27.md
bench/results/demo-apps-2026-05-27/: REPORT.md
bench/results/demo-apps-2026-05-27/leader/: acked.json  report-local.json
bench/results/demo-apps-2026-05-27/lock/: acked.json  report-local.json
bench/results/ec2-2026-05-26/: REPORT.md  acked.json  report-node-0.json  report-node-1.json  report-node-2.json
bench/results/ec2-2026-05-26-e1/: REPORT.md
bench/results/ec2-2026-05-26-e1v2/: REPORT.md  report-node-0.json  report-node-1.json  report-node-2-killed-victim.json
bench/results/ec2-2026-05-26-e2/: REPORT.md  e2-loss-report.json
bench/results/ec2-2026-05-26-e4/: REPORT.md  acked-r0050.json  acked-r1000.json  acked-r5000.json  latency-r0050.json  latency-r1000.json  latency-r10000.json  latency-r5000.json
bench/results/ec2-2026-05-27-e4-clean/: REPORT.md  acked-r1000.json  acked-r2000.json  acked-r50.json  acked-r500.json  latency-r1000.json  latency-r2000.json  latency-r50.json  latency-r500.json  summary.csv
bench/results/ec2-2026-06-15-e1v2-rerun/: REPORT.md
bench/results/ec2-2026-06-15-e5-matrix/: REPORT.md  summary.txt
bench/results/ec2-2026-06-15-e5-partition/: REPORT.md
bench/results/ec2-2026-06-16-e5-matrix/: summary.txt
bench/results/ec2-2026-06-16-e5-rejoin/: REPORT.md
bench/results/ec2-2026-06-25-e5-matrix/: REPORT.md  summary.txt
crates/trains-valkey/: Cargo.toml
crates/trains-valkey/src/: backend.rs  chaos.rs  classify.rs  command.rs  delivered_log.rs  effect.rs  lib.rs  main.rs  proxy.rs  replica.rs  resp.rs  store.rs
crates/trains-valkey/tests/: convergence.rs  crash_masking.rs  effect_convergence.rs  proxy_client_mtls.rs  proxy_tls.rs  redis_backend.rs  state_transfer.rs
scripts/bench-aws/: app.py  bench-sweep.sh  build-linux.sh  cdk.context.json  cdk.json  cdk_lints.py  coordinator.py  day2-runbook.sh  deploy.sh  e5-run.sh  requirements.txt  teardown.sh
scripts/bench-aws/iam/: TrainsBenchBoundary.json  TrainsBenchExec.json  TrainsBenchRun.json  assume-trains-bench.json
scripts/bench-aws/trains_bench/stacks/: compute.py  network.py
scripts/redis-chaos/: README.md  keygen.sh  launch-node.sh  node-bootstrap.sh
